--- a/app/assets/components/application.html.erb
+++ b/app/assets/components/application.html.erb
@@ -7,4 +7,4 @@
 //= require polymer/polymer
 //= require paper-button/paper-button
 //= require paper-checkbox/paper-checkbox
-
+//= require mocs-page/mocs-page
