--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,3 +17,6 @@
       - else
         = link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in"
     = yield
+    123
+    %paper-button{raised: ''} asdasdas
+    %paper-checkbox
