--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     = csrf_meta_tags
     = html_import_tag 'application'
   %body
+    #fb-root
     #user-widget
       - if current_user
         Welcome
@@ -16,7 +17,8 @@
         = link_to "Sign out", signout_path, id: "sign_out"
       - else
         = link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in"
-    = yield
+    %mocs-page
+
     123
     %paper-button{raised: ''} asdasdas
     %paper-checkbox
