--- a/app/assets/components/application.html.erb
+++ b/app/assets/components/application.html.erb
@@ -7,4 +7,6 @@
 //= require polymer/polymer
 //= require paper-button/paper-button
 //= require paper-checkbox/paper-checkbox
+//= require iron-ajax/iron-ajax
+//= require paper-tabs/paper-tabs
 //= require mocs-page/mocs-page
