--- a/app/assets/components/application.html.erb
+++ b/app/assets/components/application.html.erb
@@ -9,4 +9,5 @@
 //= require paper-checkbox/paper-checkbox
 //= require iron-ajax/iron-ajax
 //= require paper-tabs/paper-tabs
+//= require paper-material/paper-material
 //= require mocs-page/mocs-page
