--- a/app/assets/components/application.html.erb
+++ b/app/assets/components/application.html.erb
@@ -10,4 +10,5 @@
 //= require iron-ajax/iron-ajax
 //= require paper-tabs/paper-tabs
 //= require paper-material/paper-material
+//= require iron-pages/iron-pages
 //= require mocs-page/mocs-page
