--- a/app/assets/components/mocs-page/mocs-page.html
+++ b/app/assets/components/mocs-page/mocs-page.html
@@ -2,26 +2,35 @@
   <link rel="stylesheet" href="mocs-page.css" />
   <template>
 
-    <paper-tabs>
-      <paper-tab>TAB 1</paper-tab>
-      <paper-tab>TAB 2</paper-tab>
-      <paper-tab>TAB 3</paper-tab>
+    <paper-tabs selected="{{selected}}">
+      <paper-tab>Items</paper-tab>
+      <paper-tab>Orders</paper-tab>
     </paper-tabs>
+
     <iron-ajax
       auto
       url="/items"
       handle-as="json"
       last-response="{{items}}"></iron-ajax>
 
-    <section class="flex layout horizontal wrap">
-      <template is="dom-repeat" items="{{items}}">
-        <paper-material elevation='5' animated>
-          <span>{{item.name}}</span><br/>
-          <span>Price: </span><span>{{item.price}}</span><span> $</span>
-          </div><paper-button raised>Add to Cart</paper-button>
-        </paper-material>
-      </template>
-    </section>
+    <iron-pages selected="{{selected}}">
+      <div>
+        <section class="flex layout horizontal wrap">
+          <template is="dom-repeat" items="{{items}}">
+            <paper-material elevation='4' animated>
+              <span>{{item.name}}</span><br/>
+              <span>Price: </span><span>{{item.price}}</span><span> $</span>
+              <paper-button raised on-tap="addToCart">Add to Cart</paper-button>
+            </paper-material>
+          </template>
+        </section>
+      </div>
+
+      <div>
+        <span>page2</span>
+      </div>
+
+    </iron-pages>
 
   </template>
 
