--- a/app/assets/components/application.html.erb
+++ b/app/assets/components/application.html.erb
@@ -11,4 +11,5 @@
 //= require paper-tabs/paper-tabs
 //= require paper-material/paper-material
 //= require iron-pages/iron-pages
+//= require mocs-item/mocs-item
 //= require mocs-page/mocs-page
