--- a/app/assets/components/mocs-item/mocs-item.css
+++ b/app/assets/components/mocs-item/mocs-item.css
@@ -1,3 +1,13 @@
 :host {
   display: block;
 }
+
+
+paper-material {
+  padding: 20px;
+  margin: 20px;
+}
+
+paper-button {
+  margin-top: 10px;
+}
