--- a/app/assets/components/mocs-item/mocs-item.html
+++ b/app/assets/components/mocs-item/mocs-item.html
@@ -2,10 +2,12 @@
   <link rel="stylesheet" href="mocs-item.css" />
   <template>
 
-    <paper-material elevation='4' animated>
-      <span>{{_name}}</span><br/>
-      <span>Price: </span><span>{{_price}}</span><span> $</span>
-      <paper-button raised on-tap="addToCart">Add to Cart</paper-button>
+    <paper-material elevation='4' animated >
+      <span>{{name}}</span><br/>
+      <span>Price: </span><span>{{price}}</span><span> $</span>
+      <paper-button raised on-tap="addToOrder" class="flex layout vertical">
+        Add to Order
+      </paper-button>
     </paper-material>
 
   </template>
