--- a/app/assets/components/application.html.erb
+++ b/app/assets/components/application.html.erb
@@ -12,4 +12,5 @@
 //= require paper-material/paper-material
 //= require iron-pages/iron-pages
 //= require mocs-item/mocs-item
+//= require mocs-order/mocs-order
 //= require mocs-page/mocs-page
