--- a/app/assets/components/mocs-item/mocs-item.html
+++ b/app/assets/components/mocs-item/mocs-item.html
@@ -3,8 +3,8 @@
   <template>
 
     <paper-material elevation='4' animated >
-      <span>{{name}}</span><br/>
-      <span>Price: </span><span>{{price}}</span><span> $</span>
+      <span>{{_name}}</span><br/>
+      <span>Price: </span><span>{{_price}}</span><span> $</span>
       <paper-button raised on-tap="addToOrder" class="flex layout vertical">
         Add to Order
       </paper-button>
