--- a/app/assets/components/mocs-page/mocs-page.html
+++ b/app/assets/components/mocs-page/mocs-page.html
@@ -10,42 +10,41 @@
     <iron-ajax
       auto
       url="/items"
-      handle-as="json"
-      last-response="{{ items }}"></iron-ajax>
+      last-response="{{items}}"></iron-ajax>
     <iron-ajax
       auto
       url="/orders"
-      handle-as="json"
-      content-type='application/json'
-      last-response="{{ orders }}"
+      last-response="{{orders}}"
       on-response="setCurrentOrder"></iron-ajax>
     <iron-ajax
       id='saveOrder'
-      handle-as="json"
       content-type='application/json'
       on-response="handleOrder"></iron-ajax>
 
-    <iron-pages selected="{{ selectedTab }}">
+    <iron-pages selected="{{selectedTab}}">
       <div>
         <section class="flex layout horizontal wrap" on-add-to-order="addToOrder">
-          <template is="dom-repeat" items="{{ items }}">
-
-            <mocs-item id="{{ item.id }}" name="{{ item.name }}" price="{{ item.price }}"></mocs-item>
-
+          <template is="dom-repeat" items="{{items}}">
+            <mocs-item _id="{{item.id}}" _name="{{item.name}}" _price="{{item.price}}"></mocs-item>
           </template>
         </section>
+
+        <section class="flex layout horizontal wrap" on-add-to-order="addToOrder">
+          <span>Order</span>
+          <mocs-order _id="{{currentOrder.id}}" _items="{{currentOrder.items}}" _aasm_state="{{currentOrder.aasm_state}}">
+          </mocs-order>
+        </section>
+
       </div>
 
       <div>
+        <section class="flex layout horizontal wrap">
+          <template id="ordersList" is="dom-repeat" items="{{orders}}" as="order">
 
-<!--         <section class="flex layout horizontal wrap">
-          <template is="dom-repeat" items="{{orders}}">
-
-            <mocs-order _id="{{order.id}}" item_name="{{item.name}}" _price="{{item.price}}"></mocs-item>
+            <mocs-order _id="{{order.id}}" _items="{{order.items}}" _aasm_state="{{order.aasm_state}}"></mocs-item>
 
           </template>
-        </section> -->
-
+        </section>
       </div>
 
     </iron-pages>
