add change state

--- a/app/assets/components/application.html.erb
+++ b/app/assets/components/application.html.erb
@@ -11,6 +11,7 @@
 //= require paper-tabs/paper-tabs
 //= require paper-material/paper-material
 //= require iron-pages/iron-pages
+//= require paper-toast/paper-toast
 //= require mocs-item/mocs-item
 //= require mocs-order/mocs-order
 //= require mocs-page/mocs-page
