--- a/app/assets/components/mocs-order/mocs-order.html
+++ b/app/assets/components/mocs-order/mocs-order.html
@@ -14,9 +14,11 @@
         </paper-material>
       </template>
 
-      <paper-button raised class="flex layout vertical" on-tap="performAction">
-        <span>{{computeAction(_aasm_state)}}</span>
-      </paper-button>
+      <template is="dom-if" if="{{copmuteButton(_aasm_state)}}">
+        <paper-button raised class="flex layout vertical" on-tap="performAction">
+          <span>{{computeAction(_aasm_state)}}</span>
+        </paper-button>
+      </template>
 
     </paper-material>
   </template>
