--- a/app/assets/components/application.html.erb
+++ b/app/assets/components/application.html.erb
@@ -5,13 +5,18 @@
 // can be referenced here using a relative path.
 //
 //= require polymer/polymer
+//= require iron-ajax/iron-ajax
+//= require iron-pages/iron-pages
+
 //= require paper-button/paper-button
 //= require paper-checkbox/paper-checkbox
-//= require iron-ajax/iron-ajax
 //= require paper-tabs/paper-tabs
 //= require paper-material/paper-material
-//= require iron-pages/iron-pages
 //= require paper-toast/paper-toast
+//= require paper-item/paper-item
+//= require paper-menu/paper-menu
+//= require paper-styles/paper-styles
+
 //= require mocs-item/mocs-item
 //= require mocs-order/mocs-order
 //= require mocs-page/mocs-page
