--- a/app/assets/components/mocs-page/mocs-page.css
+++ b/app/assets/components/mocs-page/mocs-page.css
@@ -1,3 +1,14 @@
 :host {
   display: block;
+  margin-top: 10px;
+}
+
+.add-new {
+  background-color: #B3E5FC;
+  margin: 10px;
+}
+
+paper-tabs {
+  background-color: #B3E5FC;
+
 }
