--- a/app/assets/components/mocs-page/mocs-page.html
+++ b/app/assets/components/mocs-page/mocs-page.html
@@ -65,6 +65,7 @@
     <paper-toast id="toast_saved" text="Saved"></paper-toast>
     <paper-toast id="toast_log_in" text="Please Sign In"></paper-toast>
     <paper-toast id="toast_already_created" text="New order is already created"></paper-toast>
+    <paper-toast id="toast_add_new_order" text="Current order is finalized, please add new one"></paper-toast>
   </template>
 
   <script src="mocs-page.js"></script>
