--- a/app/assets/components/mocs-order/mocs-order.html
+++ b/app/assets/components/mocs-order/mocs-order.html
@@ -9,8 +9,8 @@
 
       <template is="dom-repeat" items="{{items}}">
         <paper-material elevation='4' animated>
-          <span>{{item.name}}</span>
-          <span>{{item.price}}</span><span> $</span>
+          <span>{{item.name}}</span>&nbsp
+          <span class="price"><span>{{item.price}}</span><span> $</span></span>
         </paper-material>
       </template>
 
