--- a/app/assets/components/mocs-page/mocs-page.html
+++ b/app/assets/components/mocs-page/mocs-page.html
@@ -29,7 +29,7 @@
 
     <iron-pages selected="{{selectedTab}}">
       <div>
-        <section class="flex layout horizontal wrap">
+        <section class="flex layout horizontal wrap start">
           <section class="layout vertical wrap" on-change-state="changeOrderState">
             <paper-button class="add-new" raised on-tap="createNewOrder">Create new order</paper-button>
             <span>Current Order:</span>
