--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,8 +1,8 @@
 html {
     margin:    0 auto;
-    max-width: 1200px;
+    max-width: 1165px;
 }
 
 body {
-    background-color: #B6B6B6;
+    background-color: #009688;
 }
