--- a/app/assets/components/mocs-order/mocs-order.css
+++ b/app/assets/components/mocs-order/mocs-order.css
@@ -7,7 +7,7 @@ paper-material {
   margin: 1px;
   padding: 10px;
   background-color: #03A9F4;
-  color: #212121;
+  color: white;
 }
 
 paper-button {
